feat: Configure Serverless Deployment (JupyterBook + Colab)
- Added _config.yml and _toc.yml for JupyterBook website
- Added 'Open in Colab' badges to all 45+ notebooks
- Created GitHub Actions workflow for auto-deployment to gh-pages
- Providing a crash-proof, free educational platform.

--- a/data-analyst-roadmap/01_python_basics/variables.ipynb
+++ b/data-analyst-roadmap/01_python_basics/variables.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "51c2059b",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/wasim/Data-Science/blob/main/data-analyst-roadmap/01_python_basics/variables.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Python Variables and Data Types\n",
