--- a/data-analyst-roadmap/03_pandas/06_advanced_filtering.ipynb
+++ b/data-analyst-roadmap/03_pandas/06_advanced_filtering.ipynb
@@ -1,290 +1,298 @@
 {
-    "cells": [
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "# Advanced Filtering and Querying\n",
-                "\n",
-                "Select exactly the data you need.\n",
-                "\n",
-                "## Key Concepts\n",
-                "- **Boolean Indexing:** Standard selection `df[condition]`\n",
-                "- **query():** SQL-like string queries\n",
-                "- **String Methods:** `str.contains()`, `str.extract()`\n",
-                "- **isin():** Multiple value matching"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "import pandas as pd\n",
-                "import numpy as np\n",
-                "\n",
-                "# Sample dataset (Product Sales)\n",
-                "df = pd.DataFrame({\n",
-                "    'Product': ['Apple', 'Banana', 'Cherry', 'Date', 'Elderberry'],\n",
-                "    'Category': ['Fruit', 'Fruit', 'Fruit', 'Fruit', 'Berry'],\n",
-                "    'Price': [1.2, 0.5, 2.5, 3.0, 4.5],\n",
-                "    'Stock': [100, 50, 200, 150, 80],\n",
-                "    'Rating': [4.5, 3.8, 4.9, np.nan, 4.2]\n",
-                "})\n",
-                "\n",
-                "print(\"Original DataFrame:\")\n",
-                "print(df)"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 1. Boolean Indexing (The Standard Way)\n",
-                "Combine conditions with `&` (and), `|` (or), `~` (not)."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Expensive fruits (> $2.0)\n",
-                "expensive = df[df['Price'] > 2.0]\n",
-                "print(\"Price > 2.0:\")\n",
-                "print(expensive)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Complex condition: High Stock AND High Rating\n",
-                "high_quality = df[\n",
-                "    (df['Stock'] > 80) & \n",
-                "    (df['Rating'] > 4.0)\n",
-                "]\n",
-                "print(\"High Stock & High Rating:\")\n",
-                "print(high_quality)"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 2. Using `query()` Method\n",
-                " cleaner syntax for complex filtering."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Same filter as above\n",
-                "result = df.query(\"Stock > 80 and Rating > 4.0\")\n",
-                "print(\"Using query():\")\n",
-                "print(result)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Using external variables with @\n",
-                "min_price = 1.0\n",
-                "result = df.query(\"Price > @min_price\")\n",
-                "print(f\"Price > {min_price}:\")\n",
-                "print(result)"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 3. String Methods (.str accessor)\n",
-                "Filter based on text patterns."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Ends with 'berry'\n",
-                "berries = df[df['Product'].str.endswith('berry')]\n",
-                "print(\"Ends with 'berry':\")\n",
-                "print(berries)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Contains 'a' (case insensitive)\n",
-                "contains_a = df[\n",
-                "    df['Product'].str.contains('a', case=False)\n",
-                "]\n",
-                "print(\"Contains 'a':\")\n",
-                "print(contains_a)"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 4. `isin()` for Multiple Values\n",
-                "Filter by list of options."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "target_fruits = ['Apple', 'Date', 'Mango']\n",
-                "selected = df[df['Product'].isin(target_fruits)]\n",
-                "print(\"In target list:\")\n",
-                "print(selected)"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 5. Handling Missing Data in Filters\n",
-                "Be careful with NaN values."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Select rows with valid Rating (not NaN)\n",
-                "valid_rating = df[df['Rating'].notna()]\n",
-                "print(\"Valid Ratings:\")\n",
-                "print(valid_rating)\n",
-                "\n",
-                "# Query syntax for NaN\n",
-                "# result = df.query(\"Rating == Rating\") # Only valid (NaN != NaN)\n",
-                "# result = df.query(\"Rating != Rating\") # Only NaN"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 6. Where vs Mask\n",
-                "Replace values based on condition."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Keep values where Price > 1, else replace with NaN\n",
-                "result_where = df['Price'].where(df['Price'] > 1)\n",
-                "print(\"Where Price > 1:\")\n",
-                "print(result_where)\n",
-                "\n",
-                "# Replace values where Price > 2 with 999\n",
-                "result_mask = df['Price'].mask(df['Price'] > 2, 999)\n",
-                "print(\"\\nMask Price > 2 -> 999:\")\n",
-                "print(result_mask)"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Practice Exercises"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "### Exercise 1\n",
-                "Filter products that have 'e' in name AND price < 3.0 \n",
-                "using `query()`."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Your code here\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "### Exercise 2\n",
-                "Find all rows where Category is NOT 'Fruit'."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Your code here\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Key Takeaways\n",
-                "\n",
-                "✅ **Boolean** - `df[(cond1) & (cond2)]`  \n",
-                "✅ **Query** - `df.query(\"col > val\")` - cleaner!  \n",
-                "✅ **String** - `df['col'].str.contains()`  \n",
-                "✅ **Isin** - `df['col'].isin([list])`  \n",
-                "✅ **Loc/Iloc** - Select by label/position (from Intro)  \n",
-                "\n",
-                "**Next:** [Project: Merging and Filtering](README.md) →"
-            ]
-        }
-    ],
-    "metadata": {
-        "kernelspec": {
-            "display_name": "Python 3",
-            "language": "python",
-            "name": "python3"
-        },
-        "language_info": {
-            "codemirror_mode": {
-                "name": "ipython",
-                "version": 3
-            },
-            "file_extension": ".py",
-            "mimetype": "text/x-python",
-            "name": "python",
-            "nbconvert_exporter": "python",
-            "pygments_lexer": "ipython3",
-            "version": "3.10.0"
-        }
-    },
-    "nbformat": 4,
-    "nbformat_minor": 4
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "3c6c18c4",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/wasim/Data-Science/blob/main/data-analyst-roadmap/03_pandas/06_advanced_filtering.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Advanced Filtering and Querying\n",
+    "\n",
+    "Select exactly the data you need.\n",
+    "\n",
+    "## Key Concepts\n",
+    "- **Boolean Indexing:** Standard selection `df[condition]`\n",
+    "- **query():** SQL-like string queries\n",
+    "- **String Methods:** `str.contains()`, `str.extract()`\n",
+    "- **isin():** Multiple value matching"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Sample dataset (Product Sales)\n",
+    "df = pd.DataFrame({\n",
+    "    'Product': ['Apple', 'Banana', 'Cherry', 'Date', 'Elderberry'],\n",
+    "    'Category': ['Fruit', 'Fruit', 'Fruit', 'Fruit', 'Berry'],\n",
+    "    'Price': [1.2, 0.5, 2.5, 3.0, 4.5],\n",
+    "    'Stock': [100, 50, 200, 150, 80],\n",
+    "    'Rating': [4.5, 3.8, 4.9, np.nan, 4.2]\n",
+    "})\n",
+    "\n",
+    "print(\"Original DataFrame:\")\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Boolean Indexing (The Standard Way)\n",
+    "Combine conditions with `&` (and), `|` (or), `~` (not)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Expensive fruits (> $2.0)\n",
+    "expensive = df[df['Price'] > 2.0]\n",
+    "print(\"Price > 2.0:\")\n",
+    "print(expensive)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Complex condition: High Stock AND High Rating\n",
+    "high_quality = df[\n",
+    "    (df['Stock'] > 80) & \n",
+    "    (df['Rating'] > 4.0)\n",
+    "]\n",
+    "print(\"High Stock & High Rating:\")\n",
+    "print(high_quality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Using `query()` Method\n",
+    " cleaner syntax for complex filtering."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Same filter as above\n",
+    "result = df.query(\"Stock > 80 and Rating > 4.0\")\n",
+    "print(\"Using query():\")\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using external variables with @\n",
+    "min_price = 1.0\n",
+    "result = df.query(\"Price > @min_price\")\n",
+    "print(f\"Price > {min_price}:\")\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. String Methods (.str accessor)\n",
+    "Filter based on text patterns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ends with 'berry'\n",
+    "berries = df[df['Product'].str.endswith('berry')]\n",
+    "print(\"Ends with 'berry':\")\n",
+    "print(berries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Contains 'a' (case insensitive)\n",
+    "contains_a = df[\n",
+    "    df['Product'].str.contains('a', case=False)\n",
+    "]\n",
+    "print(\"Contains 'a':\")\n",
+    "print(contains_a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. `isin()` for Multiple Values\n",
+    "Filter by list of options."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_fruits = ['Apple', 'Date', 'Mango']\n",
+    "selected = df[df['Product'].isin(target_fruits)]\n",
+    "print(\"In target list:\")\n",
+    "print(selected)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Handling Missing Data in Filters\n",
+    "Be careful with NaN values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select rows with valid Rating (not NaN)\n",
+    "valid_rating = df[df['Rating'].notna()]\n",
+    "print(\"Valid Ratings:\")\n",
+    "print(valid_rating)\n",
+    "\n",
+    "# Query syntax for NaN\n",
+    "# result = df.query(\"Rating == Rating\") # Only valid (NaN != NaN)\n",
+    "# result = df.query(\"Rating != Rating\") # Only NaN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Where vs Mask\n",
+    "Replace values based on condition."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Keep values where Price > 1, else replace with NaN\n",
+    "result_where = df['Price'].where(df['Price'] > 1)\n",
+    "print(\"Where Price > 1:\")\n",
+    "print(result_where)\n",
+    "\n",
+    "# Replace values where Price > 2 with 999\n",
+    "result_mask = df['Price'].mask(df['Price'] > 2, 999)\n",
+    "print(\"\\nMask Price > 2 -> 999:\")\n",
+    "print(result_mask)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Practice Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 1\n",
+    "Filter products that have 'e' in name AND price < 3.0 \n",
+    "using `query()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 2\n",
+    "Find all rows where Category is NOT 'Fruit'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Key Takeaways\n",
+    "\n",
+    "✅ **Boolean** - `df[(cond1) & (cond2)]`  \n",
+    "✅ **Query** - `df.query(\"col > val\")` - cleaner!  \n",
+    "✅ **String** - `df['col'].str.contains()`  \n",
+    "✅ **Isin** - `df['col'].isin([list])`  \n",
+    "✅ **Loc/Iloc** - Select by label/position (from Intro)  \n",
+    "\n",
+    "**Next:** [Project: Merging and Filtering](README.md) →"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
