--- a/data-analyst-roadmap/05_statistics_for_data_analysis/01_descriptive_statistics.ipynb
+++ b/data-analyst-roadmap/05_statistics_for_data_analysis/01_descriptive_statistics.ipynb
@@ -1,215 +1,223 @@
 {
-    "cells": [
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "# Descriptive Statistics\n",
-                "\n",
-                "Summarize and understand your data.\n",
-                "\n",
-                "## Key Concepts\n",
-                "- **Central Tendency:** Mean, Median, Mode\n",
-                "- **Dispersion:** Range, Variance, Std Dev\n",
-                "- **Shape:** Skewness, Kurtosis\n",
-                "- **Position:** Quartiles, Percentiles"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "import numpy as np\n",
-                "import pandas as pd\n",
-                "import matplotlib.pyplot as plt\n",
-                "import seaborn as sns\n",
-                "from scipy import stats\n",
-                "\n",
-                "sns.set_style('whitegrid')\n",
-                "np.random.seed(42)"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 1. Measures of Central Tendency"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Generate sample data (Salary)\n",
-                "salaries = np.array([\n",
-                "    45000, 50000, 55000, 60000, 65000, \n",
-                "    70000, 75000, 80000, 250000  # Outlier\n",
-                "])\n",
-                "\n",
-                "mean_val = np.mean(salaries)\n",
-                "median_val = np.median(salaries)\n",
-                "mode_val = stats.mode(salaries, keepdims=True)[0][0]\n",
-                "\n",
-                "print(f\"Mean:   ${mean_val:,.2f}\")\n",
-                "print(f\"Median: ${median_val:,.2f}\")\n",
-                "print(f\"Mode:   ${mode_val:,.2f}\")\n",
-                "\n",
-                "print(\"\\nNote: Mean is sensitive to outliers!\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 2. Measures of Dispersion (Spread)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "range_val = np.ptp(salaries)\n",
-                "variance = np.var(salaries, ddof=1)\n",
-                "std_dev = np.std(salaries, ddof=1)\n",
-                "\n",
-                "print(f\"Range:    ${range_val:,.2f}\")\n",
-                "print(f\"Variance: {variance:,.2f}\")\n",
-                "print(f\"Std Dev:  ${std_dev:,.2f}\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 3. Quartiles and IQR"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "q1 = np.percentile(salaries, 25)\n",
-                "q3 = np.percentile(salaries, 75)\n",
-                "iqr = q3 - q1\n",
-                "\n",
-                "print(f\"Q1 (25th): ${q1:,.2f}\")\n",
-                "print(f\"Q3 (75th): ${q3:,.2f}\")\n",
-                "print(f\"IQR:       ${iqr:,.2f}\")\n",
-                "\n",
-                "# Outlier detection rule\n",
-                "lower_bound = q1 - 1.5 * iqr\n",
-                "upper_bound = q3 + 1.5 * iqr\n",
-                "\n",
-                "print(f\"\\nOutliers are < {lower_bound:,.0f} \"\n",
-                "      f\"or > {upper_bound:,.0f}\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 4. Visualizing Distribution"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Generate normal data\n",
-                "data = np.random.normal(loc=100, scale=15, size=1000)\n",
-                "\n",
-                "fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
-                "\n",
-                "# Histogram\n",
-                "sns.histplot(data, kde=True, ax=axes[0])\n",
-                "axes[0].set_title('Histogram (Shape)')\n",
-                "\n",
-                "# Box Plot\n",
-                "sns.boxplot(x=data, ax=axes[1])\n",
-                "axes[1].set_title('Box Plot (Outliers)')\n",
-                "\n",
-                "plt.tight_layout()\n",
-                "plt.show()"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 5. Skewness and Kurtosis"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "skew = stats.skew(data)\n",
-                "kurt = stats.kurtosis(data)\n",
-                "\n",
-                "print(f\"Skewness: {skew:.4f}\")\n",
-                "print(f\"Kurtosis: {kurt:.4f}\")\n",
-                "\n",
-                "print(\"\\nInterpretation:\")\n",
-                "print(\"- Skew ≈ 0: Symmetric\")\n",
-                "print(\"- Positive Skew: Tail on right\")\n",
-                "print(\"- Negative Skew: Tail on left\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Practice Exercise\n",
-                "Calculate descriptive stats for the Titanic dataset."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Load data\n",
-                "df = sns.load_dataset('titanic')\n",
-                "age = df['age'].dropna()\n",
-                "\n",
-                "# Calculate mean, median, std, min, max\n",
-                "# Visualize with histogram and boxplot\n",
-                "# Your code here"
-            ]
-        }
-    ],
-    "metadata": {
-        "kernelspec": {
-            "display_name": "Python 3",
-            "language": "python",
-            "name": "python3"
-        },
-        "language_info": {
-            "codemirror_mode": {
-                "name": "ipython",
-                "version": 3
-            },
-            "file_extension": ".py",
-            "mimetype": "text/x-python",
-            "name": "python",
-            "nbconvert_exporter": "python",
-            "pygments_lexer": "ipython3",
-            "version": "3.10.0"
-        }
-    },
-    "nbformat": 4,
-    "nbformat_minor": 4
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "629e8778",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/wasim/Data-Science/blob/main/data-analyst-roadmap/05_statistics_for_data_analysis/01_descriptive_statistics.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Descriptive Statistics\n",
+    "\n",
+    "Summarize and understand your data.\n",
+    "\n",
+    "## Key Concepts\n",
+    "- **Central Tendency:** Mean, Median, Mode\n",
+    "- **Dispersion:** Range, Variance, Std Dev\n",
+    "- **Shape:** Skewness, Kurtosis\n",
+    "- **Position:** Quartiles, Percentiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from scipy import stats\n",
+    "\n",
+    "sns.set_style('whitegrid')\n",
+    "np.random.seed(42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Measures of Central Tendency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate sample data (Salary)\n",
+    "salaries = np.array([\n",
+    "    45000, 50000, 55000, 60000, 65000, \n",
+    "    70000, 75000, 80000, 250000  # Outlier\n",
+    "])\n",
+    "\n",
+    "mean_val = np.mean(salaries)\n",
+    "median_val = np.median(salaries)\n",
+    "mode_val = stats.mode(salaries, keepdims=True)[0][0]\n",
+    "\n",
+    "print(f\"Mean:   ${mean_val:,.2f}\")\n",
+    "print(f\"Median: ${median_val:,.2f}\")\n",
+    "print(f\"Mode:   ${mode_val:,.2f}\")\n",
+    "\n",
+    "print(\"\\nNote: Mean is sensitive to outliers!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Measures of Dispersion (Spread)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "range_val = np.ptp(salaries)\n",
+    "variance = np.var(salaries, ddof=1)\n",
+    "std_dev = np.std(salaries, ddof=1)\n",
+    "\n",
+    "print(f\"Range:    ${range_val:,.2f}\")\n",
+    "print(f\"Variance: {variance:,.2f}\")\n",
+    "print(f\"Std Dev:  ${std_dev:,.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Quartiles and IQR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q1 = np.percentile(salaries, 25)\n",
+    "q3 = np.percentile(salaries, 75)\n",
+    "iqr = q3 - q1\n",
+    "\n",
+    "print(f\"Q1 (25th): ${q1:,.2f}\")\n",
+    "print(f\"Q3 (75th): ${q3:,.2f}\")\n",
+    "print(f\"IQR:       ${iqr:,.2f}\")\n",
+    "\n",
+    "# Outlier detection rule\n",
+    "lower_bound = q1 - 1.5 * iqr\n",
+    "upper_bound = q3 + 1.5 * iqr\n",
+    "\n",
+    "print(f\"\\nOutliers are < {lower_bound:,.0f} \"\n",
+    "      f\"or > {upper_bound:,.0f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Visualizing Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate normal data\n",
+    "data = np.random.normal(loc=100, scale=15, size=1000)\n",
+    "\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "\n",
+    "# Histogram\n",
+    "sns.histplot(data, kde=True, ax=axes[0])\n",
+    "axes[0].set_title('Histogram (Shape)')\n",
+    "\n",
+    "# Box Plot\n",
+    "sns.boxplot(x=data, ax=axes[1])\n",
+    "axes[1].set_title('Box Plot (Outliers)')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Skewness and Kurtosis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skew = stats.skew(data)\n",
+    "kurt = stats.kurtosis(data)\n",
+    "\n",
+    "print(f\"Skewness: {skew:.4f}\")\n",
+    "print(f\"Kurtosis: {kurt:.4f}\")\n",
+    "\n",
+    "print(\"\\nInterpretation:\")\n",
+    "print(\"- Skew ≈ 0: Symmetric\")\n",
+    "print(\"- Positive Skew: Tail on right\")\n",
+    "print(\"- Negative Skew: Tail on left\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Practice Exercise\n",
+    "Calculate descriptive stats for the Titanic dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load data\n",
+    "df = sns.load_dataset('titanic')\n",
+    "age = df['age'].dropna()\n",
+    "\n",
+    "# Calculate mean, median, std, min, max\n",
+    "# Visualize with histogram and boxplot\n",
+    "# Your code here"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
