--- a/data-analyst-roadmap/05_statistics_for_data_analysis/06_bayesian_statistics_intro.ipynb
+++ b/data-analyst-roadmap/05_statistics_for_data_analysis/06_bayesian_statistics_intro.ipynb
@@ -1,198 +1,206 @@
 {
-    "cells": [
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "# Bayesian Statistics Intro\n",
-                "\n",
-                "Update beliefs with new data.\n",
-                "\n",
-                "## Frequentist vs Bayesian\n",
-                "- **Frequentist:** Probability is long-run frequency\n",
-                "- **Bayesian:** Probability is degree of belief\n",
-                "\n",
-                "## Bayes' Theorem\n",
-                "$$ P(A|B) = \\frac{P(B|A) \\cdot P(A)}{P(B)} $$"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "import numpy as np\n",
-                "import pandas as pd\n",
-                "import matplotlib.pyplot as plt\n",
-                "import seaborn as sns\n",
-                "from scipy import stats\n",
-                "\n",
-                "sns.set_style('whitegrid')\n",
-                "np.random.seed(42)"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 1. Bayes' Theorem Example\n",
-                "\n",
-                "**Problem:** Diagnostic Test\n",
-                "- 1% of population has disease (Prior)\n",
-                "- Test is 99% accurate (Sensitivity/Specificity)\n",
-                "- You test positive. What is probability you \n",
-                "  have disease?"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Parameters\n",
-                "p_disease = 0.01\n",
-                "p_healthy = 1 - p_disease\n",
-                "p_pos_given_disease = 0.99\n",
-                "p_pos_given_healthy = 0.01\n",
-                "\n",
-                "# Calculate Total Probability of Positive Test\n",
-                "p_pos = (\n",
-                "    p_pos_given_disease * p_disease + \n",
-                "    p_pos_given_healthy * p_healthy\n",
-                ")\n",
-                "\n",
-                "# Calculate Posterior P(Disease | Positive)\n",
-                "p_disease_given_pos = (\n",
-                "    p_pos_given_disease * p_disease\n",
-                ") / p_pos\n",
-                "\n",
-                "print(f\"Prior Probability: {p_disease:.1%}\")\n",
-                "print(f\"Posterior Probability: {p_disease_given_pos:.1%}\")\n",
-                "print(\"\\nCounter-intuitive: Even with positive test, \"\n",
-                "      \"chance is only ~50% because disease is rare!\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 2. Beta Distribution (Conjugate Prior)\n",
-                "Model probability of success (e.g., coin flip, conversion)."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Prior: We think coin is fair (alpha=10, beta=10)\n",
-                "alpha_prior = 10\n",
-                "beta_prior = 10\n",
-                "\n",
-                "# Data: 100 flips, 80 heads (biased!)\n",
-                "heads = 80\n",
-                "tails = 20\n",
-                "\n",
-                "# Posterior parameters\n",
-                "alpha_post = alpha_prior + heads\n",
-                "beta_post = beta_prior + tails\n",
-                "\n",
-                "# Visualize\n",
-                "x = np.linspace(0, 1, 100)\n",
-                "prior = stats.beta.pdf(x, alpha_prior, beta_prior)\n",
-                "likelihood = stats.beta.pdf(x, heads+1, tails+1) # Scaled\n",
-                "posterior = stats.beta.pdf(x, alpha_post, beta_post)\n",
-                "\n",
-                "plt.figure(figsize=(10, 6))\n",
-                "plt.plot(x, prior, 'b--', label='Prior (Belief)')\n",
-                "plt.plot(x, posterior, 'r-', lw=3, label='Posterior (Updated)')\n",
-                "plt.title('Bayesian Updating with Beta Distribution')\n",
-                "plt.xlabel('Probability of Heads')\n",
-                "plt.legend()\n",
-                "plt.show()"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 3. Bayesian A/B Testing\n",
-                "Directly calculate probability that B > A."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Setup\n",
-                "visitors_a = 1000; conv_a = 100\n",
-                "visitors_b = 1000; conv_b = 120\n",
-                "\n",
-                "# Sample from posterior distributions\n",
-                "n_samples = 10000\n",
-                "samples_a = stats.beta.rvs(\n",
-                "    conv_a + 1, visitors_a - conv_a + 1, size=n_samples\n",
-                ")\n",
-                "samples_b = stats.beta.rvs(\n",
-                "    conv_b + 1, visitors_b - conv_b + 1, size=n_samples\n",
-                ")\n",
-                "\n",
-                "# Calculate probability B > A\n",
-                "prob_b_better = (samples_b > samples_a).mean()\n",
-                "\n",
-                "print(f\"Probability B is better than A: {prob_b_better:.1%}\")\n",
-                "\n",
-                "if prob_b_better > 0.95:\n",
-                "    print(\"Winner: B (High confidence)\")\n",
-                "else:\n",
-                "    print(\"Uncertain: Note enough evidence yet\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Practice Exercise\n",
-                "Update belief about spam email probability."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Prior: 20% of emails are spam\n",
-                "# Word \"free\" appears in 90% of spam, 10% of ham\n",
-                "# Email contains \"free\". What is p(spam)?\n",
-                "# Your code here"
-            ]
-        }
-    ],
-    "metadata": {
-        "kernelspec": {
-            "display_name": "Python 3",
-            "language": "python",
-            "name": "python3"
-        },
-        "language_info": {
-            "codemirror_mode": {
-                "name": "ipython",
-                "version": 3
-            },
-            "file_extension": ".py",
-            "mimetype": "text/x-python",
-            "name": "python",
-            "nbconvert_exporter": "python",
-            "pygments_lexer": "ipython3",
-            "version": "3.10.0"
-        }
-    },
-    "nbformat": 4,
-    "nbformat_minor": 4
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "c3d9ab2c",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/wasim/Data-Science/blob/main/data-analyst-roadmap/05_statistics_for_data_analysis/06_bayesian_statistics_intro.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bayesian Statistics Intro\n",
+    "\n",
+    "Update beliefs with new data.\n",
+    "\n",
+    "## Frequentist vs Bayesian\n",
+    "- **Frequentist:** Probability is long-run frequency\n",
+    "- **Bayesian:** Probability is degree of belief\n",
+    "\n",
+    "## Bayes' Theorem\n",
+    "$$ P(A|B) = \\frac{P(B|A) \\cdot P(A)}{P(B)} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from scipy import stats\n",
+    "\n",
+    "sns.set_style('whitegrid')\n",
+    "np.random.seed(42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Bayes' Theorem Example\n",
+    "\n",
+    "**Problem:** Diagnostic Test\n",
+    "- 1% of population has disease (Prior)\n",
+    "- Test is 99% accurate (Sensitivity/Specificity)\n",
+    "- You test positive. What is probability you \n",
+    "  have disease?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameters\n",
+    "p_disease = 0.01\n",
+    "p_healthy = 1 - p_disease\n",
+    "p_pos_given_disease = 0.99\n",
+    "p_pos_given_healthy = 0.01\n",
+    "\n",
+    "# Calculate Total Probability of Positive Test\n",
+    "p_pos = (\n",
+    "    p_pos_given_disease * p_disease + \n",
+    "    p_pos_given_healthy * p_healthy\n",
+    ")\n",
+    "\n",
+    "# Calculate Posterior P(Disease | Positive)\n",
+    "p_disease_given_pos = (\n",
+    "    p_pos_given_disease * p_disease\n",
+    ") / p_pos\n",
+    "\n",
+    "print(f\"Prior Probability: {p_disease:.1%}\")\n",
+    "print(f\"Posterior Probability: {p_disease_given_pos:.1%}\")\n",
+    "print(\"\\nCounter-intuitive: Even with positive test, \"\n",
+    "      \"chance is only ~50% because disease is rare!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Beta Distribution (Conjugate Prior)\n",
+    "Model probability of success (e.g., coin flip, conversion)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prior: We think coin is fair (alpha=10, beta=10)\n",
+    "alpha_prior = 10\n",
+    "beta_prior = 10\n",
+    "\n",
+    "# Data: 100 flips, 80 heads (biased!)\n",
+    "heads = 80\n",
+    "tails = 20\n",
+    "\n",
+    "# Posterior parameters\n",
+    "alpha_post = alpha_prior + heads\n",
+    "beta_post = beta_prior + tails\n",
+    "\n",
+    "# Visualize\n",
+    "x = np.linspace(0, 1, 100)\n",
+    "prior = stats.beta.pdf(x, alpha_prior, beta_prior)\n",
+    "likelihood = stats.beta.pdf(x, heads+1, tails+1) # Scaled\n",
+    "posterior = stats.beta.pdf(x, alpha_post, beta_post)\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(x, prior, 'b--', label='Prior (Belief)')\n",
+    "plt.plot(x, posterior, 'r-', lw=3, label='Posterior (Updated)')\n",
+    "plt.title('Bayesian Updating with Beta Distribution')\n",
+    "plt.xlabel('Probability of Heads')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Bayesian A/B Testing\n",
+    "Directly calculate probability that B > A."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup\n",
+    "visitors_a = 1000; conv_a = 100\n",
+    "visitors_b = 1000; conv_b = 120\n",
+    "\n",
+    "# Sample from posterior distributions\n",
+    "n_samples = 10000\n",
+    "samples_a = stats.beta.rvs(\n",
+    "    conv_a + 1, visitors_a - conv_a + 1, size=n_samples\n",
+    ")\n",
+    "samples_b = stats.beta.rvs(\n",
+    "    conv_b + 1, visitors_b - conv_b + 1, size=n_samples\n",
+    ")\n",
+    "\n",
+    "# Calculate probability B > A\n",
+    "prob_b_better = (samples_b > samples_a).mean()\n",
+    "\n",
+    "print(f\"Probability B is better than A: {prob_b_better:.1%}\")\n",
+    "\n",
+    "if prob_b_better > 0.95:\n",
+    "    print(\"Winner: B (High confidence)\")\n",
+    "else:\n",
+    "    print(\"Uncertain: Note enough evidence yet\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Practice Exercise\n",
+    "Update belief about spam email probability."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prior: 20% of emails are spam\n",
+    "# Word \"free\" appears in 90% of spam, 10% of ham\n",
+    "# Email contains \"free\". What is p(spam)?\n",
+    "# Your code here"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
