--- a/data-analyst-roadmap/09_end_to_end_projects/ecommerce_analysis/03_cohort_analysis.ipynb
+++ b/data-analyst-roadmap/09_end_to_end_projects/ecommerce_analysis/03_cohort_analysis.ipynb
@@ -1,160 +1,168 @@
 {
-    "cells": [
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "# Cohort Analysis\n",
-                "\n",
-                "Understand customer retention over time.\n",
-                "\n",
-                "## What is a Cohort?\n",
-                "A group of customers who share a characteristic (usually first purchase date).\n",
-                "\n",
-                "## Goal\n",
-                "Visualize retention rates (e.g., how many users return 3 months later?)."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "import pandas as pd\n",
-                "import numpy as np\n",
-                "import seaborn as sns\n",
-                "import matplotlib.pyplot as plt\n",
-                "\n",
-                "# Load Data\n",
-                "try:\n",
-                "    df = pd.read_csv('ecommerce_data.csv')\n",
-                "    df['InvoiceDate'] = pd.to_datetime(df['InvoiceDate'])\n",
-                "except FileNotFoundError:\n",
-                "    print(\"Generate data first!\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 1. Create Cohort Month"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Function to get month\n",
-                "def get_month(x): \n",
-                "    return datetime(x.year, x.month, 1)\n",
-                "\n",
-                "from datetime import datetime\n",
-                "df['InvoiceMonth'] = df['InvoiceDate'].apply(get_month)\n",
-                "\n",
-                "# Get First Month for each customer\n",
-                "grouping = df.groupby('CustomerID')['InvoiceMonth']\n",
-                "df['CohortMonth'] = grouping.transform('min')\n",
-                "\n",
-                "print(df[['CustomerID', 'InvoiceDate', 'CohortMonth']].head())"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 2. Calculate Cohort Index\n",
-                "Months passed since first purchase."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "def get_date_int(df, column):\n",
-                "    year = df[column].dt.year\n",
-                "    month = df[column].dt.month\n",
-                "    return year, month\n",
-                "\n",
-                "invoice_year, invoice_month = get_date_int(df, 'InvoiceMonth')\n",
-                "cohort_year, cohort_month = get_date_int(df, 'CohortMonth')\n",
-                "\n",
-                "years_diff = invoice_year - cohort_year\n",
-                "months_diff = invoice_month - cohort_month\n",
-                "\n",
-                "df['CohortIndex'] = years_diff * 12 + months_diff + 1\n",
-                "print(df['CohortIndex'].head())"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 3. Create Retention Matrix\n",
-                "Count active customers in each cohort."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "grouping = df.groupby(['CohortMonth', 'CohortIndex'])\n",
-                "cohort_data = grouping['CustomerID'].apply(pd.Series.nunique)\n",
-                "cohort_data = cohort_data.reset_index()\n",
-                "\n",
-                "cohort_counts = cohort_data.pivot(index='CohortMonth', columns='CohortIndex', values='CustomerID')\n",
-                "print(cohort_counts.head())"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 4. Retention Rate Percentage"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "cohort_sizes = cohort_counts.iloc[:,0]\n",
-                "retention = cohort_counts.divide(cohort_sizes, axis=0)\n",
-                "retention.index = retention.index.strftime('%Y-%m')\n",
-                "\n",
-                "plt.figure(figsize=(12, 8))\n",
-                "plt.title('Retention Rates')\n",
-                "sns.heatmap(data=retention, annot=True, fmt='.0%', vmin=0.0, vmax=0.5, cmap='BuGn')\n",
-                "plt.show()"
-            ]
-        }
-    ],
-    "metadata": {
-        "kernelspec": {
-            "display_name": "Python 3",
-            "language": "python",
-            "name": "python3"
-        },
-        "language_info": {
-            "codemirror_mode": {
-                "name": "ipython",
-                "version": 3
-            },
-            "file_extension": ".py",
-            "mimetype": "text/x-python",
-            "name": "python",
-            "nbconvert_exporter": "python",
-            "pygments_lexer": "ipython3",
-            "version": "3.10.0"
-        }
-    },
-    "nbformat": 4,
-    "nbformat_minor": 4
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "b0d6baaa",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/wasim/Data-Science/blob/main/data-analyst-roadmap/09_end_to_end_projects/ecommerce_analysis/03_cohort_analysis.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cohort Analysis\n",
+    "\n",
+    "Understand customer retention over time.\n",
+    "\n",
+    "## What is a Cohort?\n",
+    "A group of customers who share a characteristic (usually first purchase date).\n",
+    "\n",
+    "## Goal\n",
+    "Visualize retention rates (e.g., how many users return 3 months later?)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Load Data\n",
+    "try:\n",
+    "    df = pd.read_csv('ecommerce_data.csv')\n",
+    "    df['InvoiceDate'] = pd.to_datetime(df['InvoiceDate'])\n",
+    "except FileNotFoundError:\n",
+    "    print(\"Generate data first!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Create Cohort Month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to get month\n",
+    "def get_month(x): \n",
+    "    return datetime(x.year, x.month, 1)\n",
+    "\n",
+    "from datetime import datetime\n",
+    "df['InvoiceMonth'] = df['InvoiceDate'].apply(get_month)\n",
+    "\n",
+    "# Get First Month for each customer\n",
+    "grouping = df.groupby('CustomerID')['InvoiceMonth']\n",
+    "df['CohortMonth'] = grouping.transform('min')\n",
+    "\n",
+    "print(df[['CustomerID', 'InvoiceDate', 'CohortMonth']].head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Calculate Cohort Index\n",
+    "Months passed since first purchase."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_date_int(df, column):\n",
+    "    year = df[column].dt.year\n",
+    "    month = df[column].dt.month\n",
+    "    return year, month\n",
+    "\n",
+    "invoice_year, invoice_month = get_date_int(df, 'InvoiceMonth')\n",
+    "cohort_year, cohort_month = get_date_int(df, 'CohortMonth')\n",
+    "\n",
+    "years_diff = invoice_year - cohort_year\n",
+    "months_diff = invoice_month - cohort_month\n",
+    "\n",
+    "df['CohortIndex'] = years_diff * 12 + months_diff + 1\n",
+    "print(df['CohortIndex'].head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Create Retention Matrix\n",
+    "Count active customers in each cohort."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouping = df.groupby(['CohortMonth', 'CohortIndex'])\n",
+    "cohort_data = grouping['CustomerID'].apply(pd.Series.nunique)\n",
+    "cohort_data = cohort_data.reset_index()\n",
+    "\n",
+    "cohort_counts = cohort_data.pivot(index='CohortMonth', columns='CohortIndex', values='CustomerID')\n",
+    "print(cohort_counts.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Retention Rate Percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cohort_sizes = cohort_counts.iloc[:,0]\n",
+    "retention = cohort_counts.divide(cohort_sizes, axis=0)\n",
+    "retention.index = retention.index.strftime('%Y-%m')\n",
+    "\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "plt.title('Retention Rates')\n",
+    "sns.heatmap(data=retention, annot=True, fmt='.0%', vmin=0.0, vmax=0.5, cmap='BuGn')\n",
+    "plt.show()"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
