--- a/data-analyst-roadmap/04_data_visualization/02_seaborn_advanced.ipynb
+++ b/data-analyst-roadmap/04_data_visualization/02_seaborn_advanced.ipynb
@@ -1,145 +1,153 @@
 {
-    "cells": [
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "# Advanced Visualization with Seaborn\n",
-                "Create statistical graphics that are attractive and informative.\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "metadata": {},
-            "source": [
-                "import seaborn as sns\n",
-                "import matplotlib.pyplot as plt\n",
-                "import pandas as pd\n",
-                "import numpy as np\n"
-            ],
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "code",
-            "metadata": {},
-            "source": [
-                "# Load dataset\n",
-                "tips = sns.load_dataset('tips')\n",
-                "tips.head()\n"
-            ],
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Distribution Plots\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "metadata": {},
-            "source": [
-                "sns.histplot(data=tips, x='total_bill', kde=True)\n",
-                "plt.show()\n"
-            ],
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Categorical Plots\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "metadata": {},
-            "source": [
-                "sns.boxplot(x='day', y='total_bill', data=tips)\n",
-                "plt.show()\n"
-            ],
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "code",
-            "metadata": {},
-            "source": [
-                "sns.violinplot(x='day', y='total_bill', data=tips)\n",
-                "plt.show()\n"
-            ],
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Relationship Plots\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "metadata": {},
-            "source": [
-                "sns.scatterplot(x='total_bill', y='tip', hue='sex', data=tips)\n",
-                "plt.show()\n"
-            ],
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "code",
-            "metadata": {},
-            "source": [
-                "sns.pairplot(tips, hue='sex')\n",
-                "plt.show()\n"
-            ],
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Heatmaps\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "metadata": {},
-            "source": [
-                "corr = tips.corr()\n",
-                "sns.heatmap(corr, annot=True, cmap='coolwarm')\n",
-                "plt.show()\n"
-            ],
-            "execution_count": null,
-            "outputs": []
-        }
-    ],
-    "metadata": {
-        "kernelspec": {
-            "display_name": "Python 3",
-            "language": "python",
-            "name": "python3"
-        },
-        "language_info": {
-            "codemirror_mode": {
-                "name": "ipython",
-                "version": 3
-            },
-            "file_extension": ".py",
-            "mimetype": "text/x-python",
-            "name": "python",
-            "nbconvert_exporter": "python",
-            "pygments_lexer": "ipython3",
-            "version": "3.8.5"
-        }
-    },
-    "nbformat": 4,
-    "nbformat_minor": 4
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "7abfb716",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/wasim/Data-Science/blob/main/data-analyst-roadmap/04_data_visualization/02_seaborn_advanced.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Advanced Visualization with Seaborn\n",
+    "Create statistical graphics that are attractive and informative.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load dataset\n",
+    "tips = sns.load_dataset('tips')\n",
+    "tips.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distribution Plots\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.histplot(data=tips, x='total_bill', kde=True)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Categorical Plots\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.boxplot(x='day', y='total_bill', data=tips)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.violinplot(x='day', y='total_bill', data=tips)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Relationship Plots\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.scatterplot(x='total_bill', y='tip', hue='sex', data=tips)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.pairplot(tips, hue='sex')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Heatmaps\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr = tips.corr()\n",
+    "sns.heatmap(corr, annot=True, cmap='coolwarm')\n",
+    "plt.show()\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
