--- a/data-analyst-roadmap/05_statistics_for_data_analysis/07_time_series_statistics.ipynb
+++ b/data-analyst-roadmap/05_statistics_for_data_analysis/07_time_series_statistics.ipynb
@@ -1,188 +1,196 @@
 {
-    "cells": [
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "# Time Series Statistics\n",
-                "\n",
-                "Analyze data over time.\n",
-                "\n",
-                "## Key Concepts\n",
-                "- **Trend:** Long-term direction\n",
-                "- **Seasonality:** Periodic patterns\n",
-                "- **Stationarity:** Properties constant over time\n",
-                "- **Autocorrelation:** Relation to past values"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "import numpy as np\n",
-                "import pandas as pd\n",
-                "import matplotlib.pyplot as plt\n",
-                "import seaborn as sns\n",
-                "from statsmodels.tsa.stattools import adfuller\n",
-                "from statsmodels.graphics.tsaplots import (\n",
-                "    plot_acf, plot_pacf\n",
-                ")\n",
-                "\n",
-                "sns.set_style('whitegrid')"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 1. Generating Time Series Data"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Generate synthetic data\n",
-                "date_rng = pd.date_range(\n",
-                "    start='1/1/2023', \n",
-                "    end='1/01/2024', \n",
-                "    freq='D'\n",
-                ")\n",
-                "n = len(date_rng)\n",
-                "\n",
-                "# Trend + Seasonality + Noise\n",
-                "trend = np.linspace(0, 10, n)\n",
-                "seasonality = 5 * np.sin(np.linspace(0, 20, n))\n",
-                "noise = np.random.normal(0, 1, n)\n",
-                "\n",
-                "data = trend + seasonality + noise\n",
-                "ts = pd.Series(data, index=date_rng)\n",
-                "\n",
-                "plt.figure(figsize=(10, 5))\n",
-                "plt.plot(ts)\n",
-                "plt.title('Synthetic Time Series')\n",
-                "plt.show()"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 2. Stationarity Test (ADF)\n",
-                "Most models require stationary data (constant mean/variance)."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "def check_stationarity(timeseries):\n",
-                "    result = adfuller(timeseries)\n",
-                "    print('ADF Statistic:', result[0])\n",
-                "    print('p-value:', result[1])\n",
-                "    \n",
-                "    if result[1] <= 0.05:\n",
-                "        print(\"Result: Stationary (Reject H₀)\")\n",
-                "    else:\n",
-                "        print(\"Result: Non-Stationary (Fail to reject H₀)\")\n",
-                "\n",
-                "check_stationarity(ts)"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 3. Differencing\n",
-                "Make non-stationary data stationary."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "ts_diff = ts.diff().dropna()\n",
-                "\n",
-                "plt.figure(figsize=(10, 5))\n",
-                "plt.plot(ts_diff)\n",
-                "plt.title('Differenced Series')\n",
-                "plt.show()\n",
-                "\n",
-                "check_stationarity(ts_diff)"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 4. Autocorrelation (ACF/PACF)\n",
-                "Measure correlation with lagged versions."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
-                "\n",
-                "plot_acf(ts_diff, ax=axes[0])\n",
-                "plot_pacf(ts_diff, ax=axes[1])\n",
-                "\n",
-                "plt.tight_layout()\n",
-                "plt.show()"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Practice Exercise\n",
-                "Analyze stock price data for stationarity."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Load a stock dataset (e.g., from yahoo finance via pandas-datareader)\n",
-                "# Plot the closing price\n",
-                "# Run ADF test\n",
-                "# Take first difference and re-test\n",
-                "# Your code here"
-            ]
-        }
-    ],
-    "metadata": {
-        "kernelspec": {
-            "display_name": "Python 3",
-            "language": "python",
-            "name": "python3"
-        },
-        "language_info": {
-            "codemirror_mode": {
-                "name": "ipython",
-                "version": 3
-            },
-            "file_extension": ".py",
-            "mimetype": "text/x-python",
-            "name": "python",
-            "nbconvert_exporter": "python",
-            "pygments_lexer": "ipython3",
-            "version": "3.10.0"
-        }
-    },
-    "nbformat": 4,
-    "nbformat_minor": 4
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "c20f698c",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/wasim/Data-Science/blob/main/data-analyst-roadmap/05_statistics_for_data_analysis/07_time_series_statistics.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Time Series Statistics\n",
+    "\n",
+    "Analyze data over time.\n",
+    "\n",
+    "## Key Concepts\n",
+    "- **Trend:** Long-term direction\n",
+    "- **Seasonality:** Periodic patterns\n",
+    "- **Stationarity:** Properties constant over time\n",
+    "- **Autocorrelation:** Relation to past values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from statsmodels.tsa.stattools import adfuller\n",
+    "from statsmodels.graphics.tsaplots import (\n",
+    "    plot_acf, plot_pacf\n",
+    ")\n",
+    "\n",
+    "sns.set_style('whitegrid')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Generating Time Series Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate synthetic data\n",
+    "date_rng = pd.date_range(\n",
+    "    start='1/1/2023', \n",
+    "    end='1/01/2024', \n",
+    "    freq='D'\n",
+    ")\n",
+    "n = len(date_rng)\n",
+    "\n",
+    "# Trend + Seasonality + Noise\n",
+    "trend = np.linspace(0, 10, n)\n",
+    "seasonality = 5 * np.sin(np.linspace(0, 20, n))\n",
+    "noise = np.random.normal(0, 1, n)\n",
+    "\n",
+    "data = trend + seasonality + noise\n",
+    "ts = pd.Series(data, index=date_rng)\n",
+    "\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.plot(ts)\n",
+    "plt.title('Synthetic Time Series')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Stationarity Test (ADF)\n",
+    "Most models require stationary data (constant mean/variance)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_stationarity(timeseries):\n",
+    "    result = adfuller(timeseries)\n",
+    "    print('ADF Statistic:', result[0])\n",
+    "    print('p-value:', result[1])\n",
+    "    \n",
+    "    if result[1] <= 0.05:\n",
+    "        print(\"Result: Stationary (Reject H₀)\")\n",
+    "    else:\n",
+    "        print(\"Result: Non-Stationary (Fail to reject H₀)\")\n",
+    "\n",
+    "check_stationarity(ts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Differencing\n",
+    "Make non-stationary data stationary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts_diff = ts.diff().dropna()\n",
+    "\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.plot(ts_diff)\n",
+    "plt.title('Differenced Series')\n",
+    "plt.show()\n",
+    "\n",
+    "check_stationarity(ts_diff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Autocorrelation (ACF/PACF)\n",
+    "Measure correlation with lagged versions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "\n",
+    "plot_acf(ts_diff, ax=axes[0])\n",
+    "plot_pacf(ts_diff, ax=axes[1])\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Practice Exercise\n",
+    "Analyze stock price data for stationarity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load a stock dataset (e.g., from yahoo finance via pandas-datareader)\n",
+    "# Plot the closing price\n",
+    "# Run ADF test\n",
+    "# Take first difference and re-test\n",
+    "# Your code here"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
