--- a/data-analyst-roadmap/05_statistics_for_data_analysis/09_regression_diagnostics.ipynb
+++ b/data-analyst-roadmap/05_statistics_for_data_analysis/09_regression_diagnostics.ipynb
@@ -1,169 +1,177 @@
 {
-    "cells": [
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "# Regression Diagnostics\n",
-                "\n",
-                "Check if your model is valid.\n",
-                "\n",
-                "## Key Assumptions of Linear Regression\n",
-                "1. **Linearity:** X and Y have linear relationship\n",
-                "2. **Independence:** Errors are independent\n",
-                "3. **Homoscedasticity:** Constant variance of errors\n",
-                "4. **Normality:** Errors are normally distributed\n",
-                "5. **No Multicollinearity:** Independent variables not correlated"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "import numpy as np\n",
-                "import pandas as pd\n",
-                "import matplotlib.pyplot as plt\n",
-                "import seaborn as sns\n",
-                "import statsmodels.api as sm\n",
-                "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
-                "\n",
-                "sns.set_style('whitegrid')"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 1. Fit Model"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Generate data\n",
-                "X = np.random.rand(100, 2)\n",
-                "y = 2 * X[:, 0] + 3 * X[:, 1] + 1 + np.random.normal(0, 0.5, 100)\n",
-                "\n",
-                "X = sm.add_constant(X)\n",
-                "model = sm.OLS(y, X).fit()\n",
-                "residuals = model.resid\n",
-                "fitted = model.fittedvalues"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 2. Check Linearity & Homoscedasticity\n",
-                "Plot Residuals vs Fitted values."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "plt.figure(figsize=(8, 5))\n",
-                "plt.scatter(fitted, residuals)\n",
-                "plt.axhline(0, color='red', linestyle='--')\n",
-                "plt.xlabel('Fitted Values')\n",
-                "plt.ylabel('Residuals')\n",
-                "plt.title('Residuals vs Fitted')\n",
-                "plt.show()\n",
-                "print(\"Look for: Random scatter around 0 lines (Good). Funnel shape (Bad).\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 3. Check Normality of Errors\n",
-                "Q-Q Plot and Histogram."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "fig, ax = plt.subplots(1, 2, figsize=(12, 5))\n",
-                "sm.qqplot(residuals, line='45', ax=ax[0])\n",
-                "sns.histplot(residuals, kde=True, ax=ax[1])\n",
-                "plt.show()"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 4. Check Multicollinearity (VIF)\n",
-                "Variance Inflation Factor."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "vif = pd.DataFrame()\n",
-                "vif[\"Variable\"] = [f\"X{i}\" for i in range(X.shape[1])]\n",
-                "vif[\"VIF\"] = [\n",
-                "    variance_inflation_factor(X, i)\n",
-                "    for i in range(X.shape[1])\n",
-                "]\n",
-                "\n",
-                "print(vif)\n",
-                "print(\"\\nRule of Thumb: VIF > 5-10 indicates high multicollinearity.\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Practice Exercise\n",
-                "Run diagnostics on California Housing dataset."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Load sklearn california housing dataset\n",
-                "# Fit OLS model\n",
-                "# Check assumptions\n",
-                "# Your code here"
-            ]
-        }
-    ],
-    "metadata": {
-        "kernelspec": {
-            "display_name": "Python 3",
-            "language": "python",
-            "name": "python3"
-        },
-        "language_info": {
-            "codemirror_mode": {
-                "name": "ipython",
-                "version": 3
-            },
-            "file_extension": ".py",
-            "mimetype": "text/x-python",
-            "name": "python",
-            "nbconvert_exporter": "python",
-            "pygments_lexer": "ipython3",
-            "version": "3.10.0"
-        }
-    },
-    "nbformat": 4,
-    "nbformat_minor": 4
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "33150a24",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/wasim/Data-Science/blob/main/data-analyst-roadmap/05_statistics_for_data_analysis/09_regression_diagnostics.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Regression Diagnostics\n",
+    "\n",
+    "Check if your model is valid.\n",
+    "\n",
+    "## Key Assumptions of Linear Regression\n",
+    "1. **Linearity:** X and Y have linear relationship\n",
+    "2. **Independence:** Errors are independent\n",
+    "3. **Homoscedasticity:** Constant variance of errors\n",
+    "4. **Normality:** Errors are normally distributed\n",
+    "5. **No Multicollinearity:** Independent variables not correlated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
+    "\n",
+    "sns.set_style('whitegrid')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Fit Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate data\n",
+    "X = np.random.rand(100, 2)\n",
+    "y = 2 * X[:, 0] + 3 * X[:, 1] + 1 + np.random.normal(0, 0.5, 100)\n",
+    "\n",
+    "X = sm.add_constant(X)\n",
+    "model = sm.OLS(y, X).fit()\n",
+    "residuals = model.resid\n",
+    "fitted = model.fittedvalues"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Check Linearity & Homoscedasticity\n",
+    "Plot Residuals vs Fitted values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 5))\n",
+    "plt.scatter(fitted, residuals)\n",
+    "plt.axhline(0, color='red', linestyle='--')\n",
+    "plt.xlabel('Fitted Values')\n",
+    "plt.ylabel('Residuals')\n",
+    "plt.title('Residuals vs Fitted')\n",
+    "plt.show()\n",
+    "print(\"Look for: Random scatter around 0 lines (Good). Funnel shape (Bad).\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Check Normality of Errors\n",
+    "Q-Q Plot and Histogram."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "sm.qqplot(residuals, line='45', ax=ax[0])\n",
+    "sns.histplot(residuals, kde=True, ax=ax[1])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Check Multicollinearity (VIF)\n",
+    "Variance Inflation Factor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vif = pd.DataFrame()\n",
+    "vif[\"Variable\"] = [f\"X{i}\" for i in range(X.shape[1])]\n",
+    "vif[\"VIF\"] = [\n",
+    "    variance_inflation_factor(X, i)\n",
+    "    for i in range(X.shape[1])\n",
+    "]\n",
+    "\n",
+    "print(vif)\n",
+    "print(\"\\nRule of Thumb: VIF > 5-10 indicates high multicollinearity.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Practice Exercise\n",
+    "Run diagnostics on California Housing dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load sklearn california housing dataset\n",
+    "# Fit OLS model\n",
+    "# Check assumptions\n",
+    "# Your code here"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
