--- a/data-analyst-roadmap/09_end_to_end_projects/ecommerce_analysis/01_data_generation.ipynb
+++ b/data-analyst-roadmap/09_end_to_end_projects/ecommerce_analysis/01_data_generation.ipynb
@@ -1,130 +1,138 @@
 {
-    "cells": [
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "# E-Commerce Data Generation\n",
-                "\n",
-                "Create a realistic transaction dataset for analysis.\n",
-                "\n",
-                "## Fields\n",
-                "- **InvoiceNo:** Unique transaction ID.\n",
-                "- **StockCode:** Product ID.\n",
-                "- **Description:** Product Name.\n",
-                "- **Quantity:** Items sold.\n",
-                "- **InvoiceDate:** Time of sale.\n",
-                "- **UnitPrice:** Price per item.\n",
-                "- **CustomerID:** User ID.\n",
-                "- **Country:** User location."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "import pandas as pd\n",
-                "import numpy as np\n",
-                "import random\n",
-                "from datetime import datetime, timedelta\n",
-                "\n",
-                "# Settings\n",
-                "np.random.seed(42)\n",
-                "NUM_TRANSACTIONS = 10000\n",
-                "NUM_CUSTOMERS = 1000\n",
-                "NUM_PRODUCTS = 50\n",
-                "\n",
-                "# Generate Customers\n",
-                "customer_ids = np.arange(1000, 1000 + NUM_CUSTOMERS)\n",
-                "countries = ['USA', 'UK', 'Canada', 'Germany', 'France']\n",
-                "customer_country = {cid: np.random.choice(countries, p=[0.4, 0.3, 0.1, 0.1, 0.1]) for cid in customer_ids}\n",
-                "\n",
-                "# Generate Products\n",
-                "products = {\n",
-                "    f'PROD{i}': {\n",
-                "        'desc': f'Product {i}', \n",
-                "        'price': round(np.random.uniform(5, 500), 2)\n",
-                "    } for i in range(NUM_PRODUCTS)\n",
-                "}\n",
-                "product_keys = list(products.keys())\n",
-                "\n",
-                "# Generate Transactions\n",
-                "data = []\n",
-                "start_date = datetime(2023, 1, 1)\n",
-                "\n",
-                "for i in range(NUM_TRANSACTIONS):\n",
-                "    # Random Invoice Date\n",
-                "    date = start_date + timedelta(days=np.random.randint(0, 365))\n",
-                "    \n",
-                "    # Random Customer\n",
-                "    cid = np.random.choice(customer_ids)\n",
-                "    \n",
-                "    # Random Product\n",
-                "    pid = np.random.choice(product_keys)\n",
-                "    prod = products[pid]\n",
-                "    \n",
-                "    # Random Quantity (skewed lower)\n",
-                "    qty = np.random.randint(1, 10)\n",
-                "    if np.random.random() > 0.9:\n",
-                "        qty += np.random.randint(10, 50) # Bulk buy\n",
-                "        \n",
-                "    data.append([\n",
-                "        f'INV{10000+i}',\n",
-                "        pid,\n",
-                "        prod['desc'],\n",
-                "        qty,\n",
-                "        date,\n",
-                "        prod['price'],\n",
-                "        cid,\n",
-                "        customer_country[cid]\n",
-                "    ])\n",
-                "\n",
-                "# Create DataFrame\n",
-                "df = pd.DataFrame(data, columns=[\n",
-                "    'InvoiceNo', 'StockCode', 'Description', 'Quantity', \n",
-                "    'InvoiceDate', 'UnitPrice', 'CustomerID', 'Country'\n",
-                "])\n",
-                "\n",
-                "# Add Total Amount\n",
-                "df['TotalAmount'] = df['Quantity'] * df['UnitPrice']\n",
-                "\n",
-                "print(df.head())\n",
-                "print(df.info())"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Save data for next steps\n",
-                "df.to_csv('ecommerce_data.csv', index=False)\n",
-                "print(\"Data saved to ecommerce_data.csv\")"
-            ]
-        }
-    ],
-    "metadata": {
-        "kernelspec": {
-            "display_name": "Python 3",
-            "language": "python",
-            "name": "python3"
-        },
-        "language_info": {
-            "codemirror_mode": {
-                "name": "ipython",
-                "version": 3
-            },
-            "file_extension": ".py",
-            "mimetype": "text/x-python",
-            "name": "python",
-            "nbconvert_exporter": "python",
-            "pygments_lexer": "ipython3",
-            "version": "3.10.0"
-        }
-    },
-    "nbformat": 4,
-    "nbformat_minor": 4
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "8bfbc520",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/wasim/Data-Science/blob/main/data-analyst-roadmap/09_end_to_end_projects/ecommerce_analysis/01_data_generation.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# E-Commerce Data Generation\n",
+    "\n",
+    "Create a realistic transaction dataset for analysis.\n",
+    "\n",
+    "## Fields\n",
+    "- **InvoiceNo:** Unique transaction ID.\n",
+    "- **StockCode:** Product ID.\n",
+    "- **Description:** Product Name.\n",
+    "- **Quantity:** Items sold.\n",
+    "- **InvoiceDate:** Time of sale.\n",
+    "- **UnitPrice:** Price per item.\n",
+    "- **CustomerID:** User ID.\n",
+    "- **Country:** User location."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import random\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "# Settings\n",
+    "np.random.seed(42)\n",
+    "NUM_TRANSACTIONS = 10000\n",
+    "NUM_CUSTOMERS = 1000\n",
+    "NUM_PRODUCTS = 50\n",
+    "\n",
+    "# Generate Customers\n",
+    "customer_ids = np.arange(1000, 1000 + NUM_CUSTOMERS)\n",
+    "countries = ['USA', 'UK', 'Canada', 'Germany', 'France']\n",
+    "customer_country = {cid: np.random.choice(countries, p=[0.4, 0.3, 0.1, 0.1, 0.1]) for cid in customer_ids}\n",
+    "\n",
+    "# Generate Products\n",
+    "products = {\n",
+    "    f'PROD{i}': {\n",
+    "        'desc': f'Product {i}', \n",
+    "        'price': round(np.random.uniform(5, 500), 2)\n",
+    "    } for i in range(NUM_PRODUCTS)\n",
+    "}\n",
+    "product_keys = list(products.keys())\n",
+    "\n",
+    "# Generate Transactions\n",
+    "data = []\n",
+    "start_date = datetime(2023, 1, 1)\n",
+    "\n",
+    "for i in range(NUM_TRANSACTIONS):\n",
+    "    # Random Invoice Date\n",
+    "    date = start_date + timedelta(days=np.random.randint(0, 365))\n",
+    "    \n",
+    "    # Random Customer\n",
+    "    cid = np.random.choice(customer_ids)\n",
+    "    \n",
+    "    # Random Product\n",
+    "    pid = np.random.choice(product_keys)\n",
+    "    prod = products[pid]\n",
+    "    \n",
+    "    # Random Quantity (skewed lower)\n",
+    "    qty = np.random.randint(1, 10)\n",
+    "    if np.random.random() > 0.9:\n",
+    "        qty += np.random.randint(10, 50) # Bulk buy\n",
+    "        \n",
+    "    data.append([\n",
+    "        f'INV{10000+i}',\n",
+    "        pid,\n",
+    "        prod['desc'],\n",
+    "        qty,\n",
+    "        date,\n",
+    "        prod['price'],\n",
+    "        cid,\n",
+    "        customer_country[cid]\n",
+    "    ])\n",
+    "\n",
+    "# Create DataFrame\n",
+    "df = pd.DataFrame(data, columns=[\n",
+    "    'InvoiceNo', 'StockCode', 'Description', 'Quantity', \n",
+    "    'InvoiceDate', 'UnitPrice', 'CustomerID', 'Country'\n",
+    "])\n",
+    "\n",
+    "# Add Total Amount\n",
+    "df['TotalAmount'] = df['Quantity'] * df['UnitPrice']\n",
+    "\n",
+    "print(df.head())\n",
+    "print(df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save data for next steps\n",
+    "df.to_csv('ecommerce_data.csv', index=False)\n",
+    "print(\"Data saved to ecommerce_data.csv\")"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
