--- a/data-analyst-roadmap/09_end_to_end_projects/ecommerce_analysis/04_ecommerce_analysis.ipynb
+++ b/data-analyst-roadmap/09_end_to_end_projects/ecommerce_analysis/04_ecommerce_analysis.ipynb
@@ -1,187 +1,195 @@
 {
-    "cells": [
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "# E-commerce Customer Segmentation (RFM Analysis)\n",
-                "Understand customer behavior using Recency, Frequency, and Monetary (RFM) analysis.\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "metadata": {},
-            "source": [
-                "import pandas as pd\n",
-                "import numpy as np\n",
-                "import matplotlib.pyplot as plt\n",
-                "import seaborn as sns\n",
-                "import datetime as dt\n"
-            ],
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 1. Data Generation (Synthetic)\n",
-                "Simulate transaction data.\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "metadata": {},
-            "source": [
-                "# Generate synthetic transactions\n",
-                "n_transactions = 1000\n",
-                "n_customers = 100\n",
-                "\n",
-                "data = {\n",
-                "    'CustomerID': np.random.randint(1000, 1000 + n_customers, n_transactions),\n",
-                "    'OrderDate': [dt.date(2023, 1, 1) + dt.timedelta(days=x) for x in np.random.randint(0, 365, n_transactions)],\n",
-                "    'Amount': np.random.uniform(10, 500, n_transactions).round(2)\n",
-                "}\n",
-                "df = pd.DataFrame(data)\n",
-                "df['OrderDate'] = pd.to_datetime(df['OrderDate'])\n",
-                "df.head()\n"
-            ],
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 2. RFM Calculation\n",
-                "- **Recency**: Days since last purchase\n",
-                "- **Frequency**: Total number of purchases\n",
-                "- **Monetary**: Total amount spent\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "metadata": {},
-            "source": [
-                "# Set Anchor Date (simulate analysis at end of year)\n",
-                "anchor_date = dt.datetime(2024, 1, 1)\n",
-                "\n",
-                "rfm = df.groupby('CustomerID').agg({\n",
-                "    'OrderDate': lambda x: (anchor_date - x.max()).days,\n",
-                "    'CustomerID': 'count',\n",
-                "    'Amount': 'sum'\n",
-                "})\n",
-                "\n",
-                "rfm.rename(columns={\n",
-                "    'OrderDate': 'Recency',\n",
-                "    'CustomerID': 'Frequency',\n",
-                "    'Amount': 'Monetary'\n",
-                "}, inplace=True)\n",
-                "\n",
-                "rfm.head()\n"
-            ],
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 3. Scoring\n",
-                "Discretize the RFM values into scores (1-5).\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "metadata": {},
-            "source": [
-                "labels = range(1, 6)\n",
-                "rfm['R_Score'] = pd.qcut(rfm['Recency'], q=5, labels=list(reversed(labels))) # Lower recency is better\n",
-                "rfm['F_Score'] = pd.qcut(rfm['Frequency'], q=5, labels=labels) # Higher frequency is better\n",
-                "rfm['M_Score'] = pd.qcut(rfm['Monetary'], q=5, labels=labels) # Higher monetary is better\n",
-                "\n",
-                "rfm['RFM_Segment'] = rfm.apply(lambda x: str(x['R_Score']) + str(x['F_Score']) + str(x['M_Score']), axis=1)\n",
-                "rfm['RFM_Score'] = rfm[['R_Score', 'F_Score', 'M_Score']].sum(axis=1)\n",
-                "rfm.head()\n"
-            ],
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 4. Customer Analysis\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "metadata": {},
-            "source": [
-                "# Define segments based on score\n",
-                "def segment_customer(df):\n",
-                "    if df['RFM_Score'] >= 13:\n",
-                "        return 'Gold Check'\n",
-                "    elif df['RFM_Score'] >= 9:\n",
-                "        return 'Silver'\n",
-                "    else:\n",
-                "        return 'Bronze'\n",
-                "\n",
-                "rfm['Level'] = rfm.apply(segment_customer, axis=1)\n",
-                "rfm.head()\n"
-            ],
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 5. Visualization\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "metadata": {},
-            "source": [
-                "sns.scatterplot(x='Recency', y='Frequency', hue='Level', data=rfm)\n",
-                "plt.title('Recency vs Frequency')\n",
-                "plt.show()\n"
-            ],
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "code",
-            "metadata": {},
-            "source": [
-                "rfm['Level'].value_counts().plot(kind='bar', color=['gold', 'silver', 'brown'])\n",
-                "plt.title('Customer Segments Distribution')\n",
-                "plt.show()\n"
-            ],
-            "execution_count": null,
-            "outputs": []
-        }
-    ],
-    "metadata": {
-        "kernelspec": {
-            "display_name": "Python 3",
-            "language": "python",
-            "name": "python3"
-        },
-        "language_info": {
-            "codemirror_mode": {
-                "name": "ipython",
-                "version": 3
-            },
-            "file_extension": ".py",
-            "mimetype": "text/x-python",
-            "name": "python",
-            "nbconvert_exporter": "python",
-            "pygments_lexer": "ipython3",
-            "version": "3.8.5"
-        }
-    },
-    "nbformat": 4,
-    "nbformat_minor": 4
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "f58126cf",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/wasim/Data-Science/blob/main/data-analyst-roadmap/09_end_to_end_projects/ecommerce_analysis/04_ecommerce_analysis.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# E-commerce Customer Segmentation (RFM Analysis)\n",
+    "Understand customer behavior using Recency, Frequency, and Monetary (RFM) analysis.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import datetime as dt\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Data Generation (Synthetic)\n",
+    "Simulate transaction data.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate synthetic transactions\n",
+    "n_transactions = 1000\n",
+    "n_customers = 100\n",
+    "\n",
+    "data = {\n",
+    "    'CustomerID': np.random.randint(1000, 1000 + n_customers, n_transactions),\n",
+    "    'OrderDate': [dt.date(2023, 1, 1) + dt.timedelta(days=x) for x in np.random.randint(0, 365, n_transactions)],\n",
+    "    'Amount': np.random.uniform(10, 500, n_transactions).round(2)\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "df['OrderDate'] = pd.to_datetime(df['OrderDate'])\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. RFM Calculation\n",
+    "- **Recency**: Days since last purchase\n",
+    "- **Frequency**: Total number of purchases\n",
+    "- **Monetary**: Total amount spent\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set Anchor Date (simulate analysis at end of year)\n",
+    "anchor_date = dt.datetime(2024, 1, 1)\n",
+    "\n",
+    "rfm = df.groupby('CustomerID').agg({\n",
+    "    'OrderDate': lambda x: (anchor_date - x.max()).days,\n",
+    "    'CustomerID': 'count',\n",
+    "    'Amount': 'sum'\n",
+    "})\n",
+    "\n",
+    "rfm.rename(columns={\n",
+    "    'OrderDate': 'Recency',\n",
+    "    'CustomerID': 'Frequency',\n",
+    "    'Amount': 'Monetary'\n",
+    "}, inplace=True)\n",
+    "\n",
+    "rfm.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Scoring\n",
+    "Discretize the RFM values into scores (1-5).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = range(1, 6)\n",
+    "rfm['R_Score'] = pd.qcut(rfm['Recency'], q=5, labels=list(reversed(labels))) # Lower recency is better\n",
+    "rfm['F_Score'] = pd.qcut(rfm['Frequency'], q=5, labels=labels) # Higher frequency is better\n",
+    "rfm['M_Score'] = pd.qcut(rfm['Monetary'], q=5, labels=labels) # Higher monetary is better\n",
+    "\n",
+    "rfm['RFM_Segment'] = rfm.apply(lambda x: str(x['R_Score']) + str(x['F_Score']) + str(x['M_Score']), axis=1)\n",
+    "rfm['RFM_Score'] = rfm[['R_Score', 'F_Score', 'M_Score']].sum(axis=1)\n",
+    "rfm.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Customer Analysis\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define segments based on score\n",
+    "def segment_customer(df):\n",
+    "    if df['RFM_Score'] >= 13:\n",
+    "        return 'Gold Check'\n",
+    "    elif df['RFM_Score'] >= 9:\n",
+    "        return 'Silver'\n",
+    "    else:\n",
+    "        return 'Bronze'\n",
+    "\n",
+    "rfm['Level'] = rfm.apply(segment_customer, axis=1)\n",
+    "rfm.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Visualization\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.scatterplot(x='Recency', y='Frequency', hue='Level', data=rfm)\n",
+    "plt.title('Recency vs Frequency')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfm['Level'].value_counts().plot(kind='bar', color=['gold', 'silver', 'brown'])\n",
+    "plt.title('Customer Segments Distribution')\n",
+    "plt.show()\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
